[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://objects/Radar.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/asteroid_field/AsteroidField.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/energy_system/EnergySystem.tscn" type="PackedScene" id=4]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="AsteroidField" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Radar" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 160, 90 )

[node name="EnergySystem" parent="." instance=ExtResource( 4 )]

[node name="Timer_UpdateEnergySystem" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="timeout" from="Timer_UpdateEnergySystem" to="." method="_update_energy_system"]
